Changed description to question for poll.

--- a/app/views/opinion/polls/_form.html.erb
+++ b/app/views/opinion/polls/_form.html.erb
@@ -1,6 +1,6 @@
 <%= bootstrap_form_for(@poll, :layout => :horizontal) do |f| %>
   <%= f.text_field :view %>
-  <%= f.text_field :description %>
+  <%= f.text_field :question %>
   <%= f.form_group do %>
     <%= f.primary %>
   <% end %>
