--- a/app/views/opinion/polls/show.html.erb
+++ b/app/views/opinion/polls/show.html.erb
@@ -6,8 +6,8 @@
 </p>
 
 <p>
-  <strong>Description:</strong>
-  <%= @poll.description %>
+  <strong>Question:</strong>
+  <%= @poll.question %>
 </p>
 
 <%= link_to 'Edit', edit_poll_path(@poll) %> |
