--- a/app/views/layouts/opinion/application.html.erb
+++ b/app/views/layouts/opinion/application.html.erb
@@ -1,14 +1,72 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Opinion</title>
+  <meta charset="utf-8">
+  <title>Anorexia-Forum</title>
+  <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
+  <!--[if lt IE 9]>
+  <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
+  <![endif]-->
+
+  <!-- Le styles -->
+  <style>
+    body {
+      padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+    }
+  </style>
   <%= stylesheet_link_tag    'opinion/application', media: 'all' %>
   <%= javascript_include_tag 'opinion/application' %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="/">Anorexia-Forum</a>
+    </div>
 
-<%= yield %>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li><a href="/forums/">Forum</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Register <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <% if respond_to?(:signed_in?) && signed_in? %>
+              <li><a href="/edit_account">Edit account</a></li>
+              <li><a href="/sign_out">Sign Out</a></li>
+              <% if respond_to?(:forem_admin?) && forem_admin? %>
+                <li><a href="/forums/admin">Admin Area</a></li>
+              <% end %>
+            <% else %>
+              <li><a href="/sign_in">Sign In</a></li>
+            <% end %>
+            <li><a href="#">Something else here</a></li>
+            <li class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+            <li class="divider"></li>
+            <li><a href="#">One more separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+      <% if respond_to?(:forem_user) && forem_user %>
+        <p class="navbar-text navbar-right">Signed in as <a href="/edit_account" class="navbar-link"><%= forem_user.name %></a></p>
+      <% end %>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</div>
+
+<div class="container">
+  <%= bootstrap_messages! %>
+  <%= yield %>
+</div>
 
 </body>
 </html>
