--- a/app/views/opinion/polls/_form.html.erb
+++ b/app/views/opinion/polls/_form.html.erb
@@ -1,7 +1,19 @@
-<%= bootstrap_form_for(@poll, :layout => :horizontal) do |f| %>
-  <%= f.text_field :view %>
-  <%= f.text_field :question %>
-  <%= f.form_group do %>
-    <%= f.primary %>
+<% if @poll.respond_to?(:errors) && !@poll.errors[:options].empty? %>
+  <!-- display warning/error when no options are defined -->
+  <%= bootstrap_error_messages!(@poll) %>
+<% end %>
+
+<%= bootstrap_nested_form_for(@poll, :layout => :horizontal) do |poll_form| %>
+  <%= poll_form.text_field :view %>
+  <%= poll_form.text_field :question %>
+  <%= poll_form.form_group do %>
+    <%= poll_form.fields_for(:options) do |option_form| %>
+      <%= option_form.text_field :description, :label => 'Option' %>
+    <% end %>
+    <%= poll_form.link_to_add 'Add option', :options, :class => 'btn btn-primary col-md-offset-1' %>
+  <% end %>
+
+  <%= poll_form.form_group do %>
+    <%= poll_form.primary %>
   <% end %>
 <% end %>
