--- a/app/views/opinion/polls/_form.html.erb
+++ b/app/views/opinion/polls/_form.html.erb
@@ -1,19 +1,20 @@
-<% if @poll.respond_to?(:errors) && !@poll.errors[:options].empty? %>
-  <!-- display warning/error when no options are defined -->
-  <%= bootstrap_error_messages!(@poll) %>
-<% end %>
-
-<%= bootstrap_nested_form_for(@poll, :layout => :horizontal) do |poll_form| %>
-  <%= poll_form.text_field :view %>
-  <%= poll_form.text_field :question %>
-  <%= poll_form.form_group do %>
-    <%= poll_form.fields_for(:options) do |option_form| %>
-      <%= option_form.text_field :description, :label => 'Option' %>
-    <% end %>
-    <%= poll_form.link_to_add 'Add option', :options, :class => 'btn btn-primary col-md-offset-1' %>
+<%= nested_form_for(@poll) do |poll_form| %>
+  <div class="fields">
+    <%= poll_form.label :view %>
+    <%= poll_form.text_field :view %>
+  </div>
+  <div class="fields">
+    <%= poll_form.label :question %>
+    <%= poll_form.text_field :question %>
+  <div>
+  <%= poll_form.fields_for(:options) do |option_form| %>
+    <%= option_form.label 'Option' %>
+    <%= option_form.text_field :description %>
   <% end %>
-
-  <%= poll_form.form_group do %>
-    <%= poll_form.primary %>
-  <% end %>
+  <div class="fields">
+    <%= poll_form.link_to_add 'Add option', :options %>
+  </div>
+  <div class="fields">
+    <%= poll_form.submit %>
+  </div>
 <% end %>
