--- a/app/views/layouts/opinion/application.html.erb
+++ b/app/views/layouts/opinion/application.html.erb
@@ -9,10 +9,10 @@
 <body>
 
 <% if flash[:alert] %>
-  <p class="flash-error"><%= flash[:alert] %></p>
+  <p id="error"><%= flash[:alert] %></p>
 <% end %>
 <% if flash[:notice] %>
-  <p class="flash-notice"><%= flash[:notice] %></p>
+  <p id="notice"><%= flash[:notice] %></p>
 <% end %>
 
 <%= yield %>
