--- a/app/views/opinion/polls/show.html.erb
+++ b/app/views/opinion/polls/show.html.erb
@@ -1,9 +1,4 @@
 <p>
-  <strong>View:</strong>
-  <%= @poll.view %>
-</p>
-
-<p>
   <strong>Question:</strong>
   <%= @poll.question %>
 </p>
@@ -13,6 +8,7 @@
     <p>
       <strong>Option:</strong>
       <%= option.description %>
+      &nbsp;(<%= option.plusminus %>)
     </p>
   <% end %>
 </div>
