--- a/app/assets/stylesheets/opinion/polls.css
+++ b/app/assets/stylesheets/opinion/polls.css
@@ -28,6 +28,11 @@ div.field, div.actions {
     color: green;
 }
 
+#error {
+    color: red;
+    font: bold;
+}
+
 .field_with_errors {
     padding: 2px;
     background-color: red;
