--- a/app/views/opinion/polls/_form.html.erb
+++ b/app/views/opinion/polls/_form.html.erb
@@ -1,4 +1,18 @@
 <%= nested_form_for(@poll) do |poll_form| %>
+  <%# TODO Check if helper is available for this or create one. %>
+  <% if @poll.errors.any? %>
+    <div id="error_explanation">
+
+      <h2><%= pluralize(@poll.errors.count, 'error') %> prohibited this poll from being saved:</h2>
+
+      <ul>
+        <% @poll.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
   <div class="fields">
     <%= poll_form.label :question %>
     <%= poll_form.text_field :question %>
