--- a/app/views/opinion/polls/_poll_modal.html.erb
+++ b/app/views/opinion/polls/_poll_modal.html.erb
@@ -1,10 +1,10 @@
 <%# Bootstrap modal markup. @see: http://getbootstrap.com/javascript/#modals %>
-<div class="modal" id="new_opinion_poll_modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" data-target=".bs-example-modal-sm" aria-hidden="true">
+<%= modal_tag('new_opinion_poll_modal', :data => {:config => Opinion.configuration.to_hash}) do %>
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h4 class="modal-title" id="myModalLabel">Please Vote</h4>
+        <h4 class="modal-title">Please Vote</h4>
       </div>
       <div class="modal-body">
         <h3 class="text-center"><%= poll.question %></h3>
@@ -13,8 +13,9 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-primary" id="vote">Vote</button>
+        <%= vote_later_button('Vote later') %>
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
       </div>
     </div>
   </div>
-</div>
+<% end %>
