--- a/app/views/opinion/polls/_poll_plain.html.erb
+++ b/app/views/opinion/polls/_poll_plain.html.erb
@@ -1,9 +1,9 @@
 <%# Bootstrap modal markup. @see: http://getbootstrap.com/javascript/#modals %>
-<div class="opinion-body">
+<%= content_tag(:div, class: 'opinion-body', :id => 'new_opinion_poll', :data => {:config => Opinion.configuration.to_hash}) do %>
   <div class="opinion-label">
     <h4>Please Vote</h4>
   </div>
   <h3 class="text-left"><%= poll.question %></h3>
   <%= render :file => 'opinion/polls/_poll_opinion_form', locals: {:poll => poll, modal: false} %>
-</div>
+<% end %>
 
